# evolution_simulator

./: .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml  runner.py  single_habitat_experiment.toml  single_species_experiment.toml  visualizer_advanced.py  visualizer_basic.py
evolution_simulator/: __init__.py  creature.py  habitat.py  simulation.py  species.py
evolution_simulator/config/: simulation.toml  species_names.toml
evolution_simulator/habitats/: __init__.py  types.py
tests/: test_creature.py  test_habitat.py  test_species.py
visualizer/: __init__.py  app.py  data.py  figures.py  layout.py  network.py  panels.py  style.py
