[project]
name = "evolution-simulator"
version = "0.1.0"
description = "Evolution simulation using high-dimensional genetic vectors"
authors = [
    {name = "ZWMiller"}
]
requires-python = "^3.12"
dependencies = [
    "numpy (>=2.4.4,<3.0.0)",
    "plotly (>=6.7.0,<7.0.0)",
    "dash (>=4.1.0,<5.0.0)",
    "dash-cytoscape (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)"
]
